objects/Project_Piece__c.object
<CustomObject>
    <fields>
        <fullName>Due_This_Week_Status__c</fullName>
        <formula>IF ( !ISBLANK( Milestone_1_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_1_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
 IF ( !ISBLANK( Milestone_2_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_2_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IF ( !ISBLANK( Milestone_3_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_3_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IF ( !ISBLANK( Milestone_4_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_4_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IF ( !ISBLANK( Milestone_5_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_5_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IF ( !ISBLANK( Milestone_6_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_6_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IF ( !ISBLANK( Milestone_7_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_7_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IF ( !ISBLANK( Milestone_8_Completed__c ) &amp;&amp; MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( (   Milestone_8_Completed__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52), &quot;Done&quot;,
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&quot;, &quot;red exclamation&quot;) 
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due This Week Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Design_Time__c</fullName>
        <inlineHelpText>manually input by the Project Manager</inlineHelpText>
        <label>Estimated Design Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date_at_Post_Office__c</fullName>
        <inlineHelpText>For Mailprint to fill in</inlineHelpText>
        <label>Expected Date at Post Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date that the mailer&apos;s offer expires. Brought over from the Opportunity that created the project.</description>
        <inlineHelpText>The date that the mailer&apos;s offer expires. Brought over from the Opportunity that created the project.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_DOD_Review_Completed__c</fullName>
        <inlineHelpText>Enter the date the DOD was completed</inlineHelpText>
        <label>DOD Review Completed (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_DOD_Review__c</fullName>
        <label>DOD Review (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_Notes__c</fullName>
        <description>Notes generated by the Flag for Manager button on this Project Piece</description>
        <label>Flag Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flag_Timestamp__c</fullName>
        <description>Date and time the flag for manager occurred</description>
        <label>Flag Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Creative_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated when the Flag for Creative Manager button clicked</inlineHelpText>
        <label>Flagged for Creative Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Accuracy_Verified__c</fullName>
        <label>Form Accuracy Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Completed__c</fullName>
        <label>Form Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Sent__c</fullName>
        <label>Form Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Mapped__c</fullName>
        <label>Forms Mapped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Goal_Days__c</fullName>
        <formula>MS7_Due_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for Fulfillment orders - Milestone 7 Due Date less today&apos;s date</inlineHelpText>
        <label># of days to Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gallery_Created__c</fullName>
        <label>Gallery Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <label>Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_ID__c</fullName>
        <label>Google Analytics ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Master_Account__c</fullName>
        <label>Google Master Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Profile_Name__c</fullName>
        <label>Google Profile Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Grouping_Category__c</fullName>
        <label>Grouping Category</label>
        <picklist>
            <picklistValues>
                <fullName>SMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Set_Up__c</fullName>
        <label>Hardware Set Up/Prep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Email__c</fullName>
        <label>IM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_Email__c</fullName>
        <formula>Project__r.Opportunity__r.Implementation_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_ID__c</fullName>
        <formula>Project__r.Opportunity__r.Implementation_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_Name__c</fullName>
        <formula>Project__r.Opportunity__r.Implementation_Contact__r.FirstName +&quot; &quot;+ Project__r.Opportunity__r.Implementation_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_Phone__c</fullName>
        <formula>Project__r.Opportunity__r.Implementation_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Home_Date_Notes__c</fullName>
        <description>Required when In Home Date is changed.</description>
        <inlineHelpText>Required when In Home Date is changed.</inlineHelpText>
        <label>In Home Date Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Home_Date__c</fullName>
        <description>The date that the dealer wishes their mailers to be in customers&apos; homes by.</description>
        <inlineHelpText>The date that the dealer wishes their mailers to be in customers&apos; homes by.</inlineHelpText>
        <label>In Home Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_Entered__c</fullName>
        <label>Information Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Information_Gathered__c</fullName>
        <label>Information Gathered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification__c</fullName>
        <label>Inventory Verification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>CASE(Project_Piece_Stage__c, &quot;Completed&quot;, &quot;True&quot;, &quot;Cancelled&quot;, &quot;True&quot;, &quot;Incomplete&quot;, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsClosed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KJ_Pass_Fail__c</fullName>
        <description>Field used to determine of the Project piece was completed before the confirmed training start date or not.</description>
        <formula>IF( Date_Stage_Updated_to_Completed__c  &lt;  Confirmed_Training_Start_Date__c , &quot;PASS&quot;, &quot;FAIL&quot;)</formula>
        <inlineHelpText>Field used to determine of the Project piece was completed before the confirmed training start date or not.</inlineHelpText>
        <label>Pass / Fail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <label>Last Comment</label>
        <length>163</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Revisions_Completed__c</fullName>
        <description>Latest Revisions Requested</description>
        <label>Latest Revisions Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Revisions_Requested__c</fullName>
        <description>Latest Revisions Requested</description>
        <label>Latest Revisions Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Coordinator__c</fullName>
        <formula>Project__r.Launch_Coordinator__r.User_Full_Name__c</formula>
        <label>Launch Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Designer__c</fullName>
        <label>Lead Designer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Graphics__c</fullName>
        <inlineHelpText>link to where Graphics reside</inlineHelpText>
        <label>Link to Graphics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_HTML_Files__c</fullName>
        <label>Link to HTML File(s)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Proof_Site__c</fullName>
        <label>Link to Proof/Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_VinManager_Site__c</fullName>
        <label>Link to VinManager Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MS10_Due_Date__c</fullName>
        <inlineHelpText>Milestone 10 Due Date</inlineHelpText>
        <label>MS10 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MS10_Status__c</fullName>
        <formula>IF (TEXT( Milestone_10_Completed__c ) = NULL &amp;&amp; MS10_Due_Date__c &gt;= TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_10_Completed__c ) = NULL &amp;&amp; MS10_Due_Date__c &lt; TODAY(), &quot;Overdue&quot;, 
IF (TEXT( Milestone_10_Completed__c ) != NULL &amp;&amp; Milestone_10_Completed__c &gt; MS10_Due_Date__c , &quot;Goal Missed&quot;, 
IF (TEXT( Milestone_10_Completed__c ) != NULL &amp;&amp; Milestone_10_Completed__c &lt;= TODAY(), &quot;Goal Completed&quot;, 
&quot;Not Started&quot;))))</formula>
        <label>MS10 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS1_Due_Date__c</fullName>
        <inlineHelpText>Milestone 1 Due Date</inlineHelpText>
        <label>MS1 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MS1_Status__c</fullName>
        <formula>IF (TEXT( Milestone_1_Completed__c ) = NULL &amp;&amp;  MS1_Due_Date__c  &gt;= TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_1_Completed__c ) = NULL &amp;&amp;  MS1_Due_Date__c  &lt; TODAY(), &quot;Overdue&quot;, 
IF (TEXT( Milestone_1_Completed__c ) != NULL &amp;&amp;  Milestone_1_Completed__c  &gt;  MS1_Due_Date__c  , &quot;Goal Missed&quot;, 
IF (TEXT( Milestone_1_Completed__c  ) != NULL &amp;&amp;  Milestone_1_Completed__c  &lt;= TODAY(), &quot;Goal Completed&quot;, 
&quot;Not Started&quot;))))</formula>
        <label>MS1 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS2_Due_Date__c</fullName>
        <inlineHelpText>Milestone 2 Due Date</inlineHelpText>
        <label>MS2 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MS2_Status__c</fullName>
        <formula>IF (TEXT( Milestone_2_Completed__c ) = NULL &amp;&amp; MS2_Due_Date__c &gt;= TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_2_Completed__c ) = NULL &amp;&amp; MS2_Due_Date__c &lt; TODAY(), &quot;Overdue&quot;, 
IF (TEXT( Milestone_2_Completed__c ) != NULL &amp;&amp; Milestone_2_Completed__c &gt; MS2_Due_Date__c , &quot;Goal Missed&quot;, 
IF (TEXT( Milestone_2_Completed__c ) != NULL &amp;&amp; Milestone_2_Completed__c &lt;= TODAY(), &quot;Goal Completed&quot;, 
&quot;Not Started&quot;))))</formula>
        <inlineHelpText>formula field that looks at the Milestone Due Date and the date the milestone was completed to calculate the status</inlineHelpText>
        <label>MS2 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS3_Overall_Goal__c</fullName>
        <formula>IF (RecordTypeId = &apos;01270000000Q4V7&apos;, 
IF (Date_Stage_Updated_to_Completed__c &lt;= MS3_Due_Date__c , &quot;Goal Completed&quot;, 
IF (Date_Stage_Updated_to_Completed__c &gt;= MS3_Due_Date__c, &quot;Goal Missed&quot;, 
&quot;Check Dates&quot; 
)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS3 Overall Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS4_Overall_Goal__c</fullName>
        <formula>IF (RecordTypeId = &apos;01270000000Q4VC&apos;, 
IF (Date_Stage_Updated_to_Completed__c &lt;= MS4_Due_Date__c , &quot;Goal Completed&quot;, 
IF (Date_Stage_Updated_to_Completed__c &gt;= MS4_Due_Date__c, &quot;Goal Missed&quot;, 
&quot;Check Dates&quot; 
)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS4 Overall Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS8_Overall_Goal__c</fullName>
        <formula>IF (RecordTypeId = &apos;01270000000Q4VM&apos;, 
IF (Date_Stage_Updated_to_Completed__c &lt;= MS8_Due_Date__c  , &quot;Goal Completed&quot;, 
IF (Date_Stage_Updated_to_Completed__c &gt;= MS8_Due_Date__c, &quot;Goal Missed&quot;, 
&quot;Check Dates&quot; 
)), NULL)</formula>
        <inlineHelpText>formula field that looks at the overall goal status for a certain milestone process and gives a goal met/missed status</inlineHelpText>
        <label>MS8 Overall Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailer_Notes__c</fullName>
        <description>The concept or theme for this mailer, e.g. Father&apos;s Day Sale, Service Offer for Winback Customers</description>
        <inlineHelpText>The concept or theme for this mailer, e.g. Father&apos;s Day Sale, Service Offer for Winback Customers. Filled in from &quot;Campaign Type&quot; field on the opportunity.</inlineHelpText>
        <label>Mailer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mailer_Status__c</fullName>
        <formula>IF(
   Business_Days_to_In_Home_Date__c &lt; 10,
   &quot;Critical&quot;,
   IF(
      Business_Days_to_In_Home_Date__c &lt; 13,
      &quot;Nearing&quot;,
      IF(
         Business_Days_to_In_Home_Date__c &lt; 16,
         &quot;In Progress&quot;,
         &quot;Pending&quot;
)))</formula>
        <label>Mailer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailprint_Record_Count__c</fullName>
        <description>Filled out by Mailprint, this is their count for de-duped records which will be mailed to.</description>
        <inlineHelpText>Filled out by Mailprint, this is their count for de-duped records which will be mailed to.</inlineHelpText>
        <label>Mailprint Record Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Account_Dealer_ID__c</fullName>
        <inlineHelpText>please enter the MotoSnap dealer id setup to handle the data acquistion project</inlineHelpText>
        <label>Marketing Account Dealer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_10_Completed__c</fullName>
        <label>Milestone 10 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_10_Owner__c</fullName>
        <formula>Product_Process__r.Milestone_10_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 10 Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_10_Role_Owner__c</fullName>
        <formula>text(Product_Process__r.Assign_to_Role_10__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 10 Role Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_10_Stage__c</fullName>
        <formula>TEXT( Product_Process__r.Milestone_10_Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 10 Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_10__c</fullName>
        <formula>Product_Process__r.Milestone_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Completed__c</fullName>
        <label>Milestone 1 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Owner__c</fullName>
        <formula>Product_Process__r.Milestone_1_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 1 Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Role_Owner__c</fullName>
        <formula>text(Product_Process__r.Assign_to_Role_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 1 Role Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Stage__c</fullName>
        <formula>TEXT( Product_Process__r.Milestone_1_Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 1 Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_1__c</fullName>
        <formula>Product_Process__r.Milestone_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Age__c</fullName>
        <formula>TODAY() - Milestone_1_Completed__c</formula>
        <label>Milestone 2 Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Completed__c</fullName>
        <label>Milestone 2 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Owner__c</fullName>
        <formula>Product_Process__r.Milestone_2_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 2 Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Role_Owner__c</fullName>
        <formula>text(Product_Process__r.Assign_to_Role_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 2 Role Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Stage__c</fullName>
        <formula>TEXT( Product_Process__r.Milestone_2_Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 2 Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_2__c</fullName>
        <formula>Product_Process__r.Milestone_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_SEO_Date__c</fullName>
        <inlineHelpText>auto-generated based on the last time the report was ran</inlineHelpText>
        <label>Next SEO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Milestones__c</fullName>
        <formula>Product_Process__r.Number_of_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <description>Which OEM dealer is affected by this piece</description>
        <label>OEM</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Open</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_ID__c</fullName>
        <label>Opportunity Line Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PREFROZEN_REC_TYPE__c</fullName>
        <label>PREFROZEN REC TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Completed__c</fullName>
        <label>Percent Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Piece_Completion__c</fullName>
        <formula>Completed_Milestones__c /Number_of_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Piece Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Piece_Issue_Description__c</fullName>
        <label>Piece Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Piece_Issue__c</fullName>
        <inlineHelpText>Auto-populated from Products sold when Opportunity marked PAID</inlineHelpText>
        <label>Piece Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piece_Status__c</fullName>
        <inlineHelpText>field is updated by Workflow</inlineHelpText>
        <label>Piece Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Project_Piece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the project piece that belongs to the Primary working department</inlineHelpText>
        <label>Primary Project Asset</label>
        <referenceTo>Project_Piece__c</referenceTo>
        <relationshipLabel>Project Assets</relationshipLabel>
        <relationshipName>Project_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Printed/Packaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product_Process__r.Product_Family__c</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_MRR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Updated via Flow Trigger from the Opp Line Item&apos;s selling price (accounts for quantity).</description>
        <inlineHelpText>The amount of monthly recurring revenue this project piece represents.</inlineHelpText>
        <label>Obsolete_Product MRR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Make__c</fullName>
        <inlineHelpText>vAuto field used by the conquest product</inlineHelpText>
        <label>Product Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <inlineHelpText>automatically populated from the Opportunity Products Sold</inlineHelpText>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>look up Product to assign the milestone and stages for the product process</inlineHelpText>
        <label>Product Process</label>
        <referenceTo>Product_Process__c</referenceTo>
        <relationshipLabel>Project Pieces</relationshipLabel>
        <relationshipName>Project_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Revenue__c</fullName>
        <description>updated this field to use the sale price and not the OLI</description>
        <inlineHelpText>Actual Sale Price of Product</inlineHelpText>
        <label>Product Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Value__c</fullName>
        <inlineHelpText>what the product was sold for.  Updated by a trigger when the project asset is created, reads the Sale Price from the Opportunity line item</inlineHelpText>
        <label>Product Value (Sale Price)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Production_Department__c</fullName>
        <formula>CASE(Product_Process__r.Production_Department__c, 
&quot;Creative&quot;,&quot;Creative&quot;, 
&quot;Art Production&quot;,&quot;Art Production&quot;,
&quot;Implementation&quot;,&quot;Implementation&quot;, 
&quot;Support&quot;,&quot;Support&quot;, 
&quot;Integration&quot;, &quot;Integration&quot;,
&quot;Printing/Shipping&quot;, &quot;Printing/Shipping&quot;,
&quot;Support&quot;, &quot;Support&quot;,
&quot;Search &amp; Social&quot;, &quot;Search &amp; Social&quot;,
&quot;Fulfillment&quot;,&quot;Fulfillment&quot;,
&quot;If blank log a sfdc issue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the production dept from the product process assigned to the piece</inlineHelpText>
        <label>Production Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Billable__c</fullName>
        <formula>TEXT(Project__r.Approval_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Billable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Last_Activity_Date__c</fullName>
        <formula>Project__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Email__c</fullName>
        <inlineHelpText>used to trigger workflow</inlineHelpText>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Owner_ID__c</fullName>
        <formula>Project__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <formula>Project__r.Project_Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Piece_Special_Instructions__c</fullName>
        <label>Project Piece Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Piece_Stage__c</fullName>
        <label>Project Asset Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Travel Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Customer&apos;s Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Website Approval-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Shipment Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing/Shipping/Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Shipping_Address__c</fullName>
        <formula>Project__r.Project_Shipping_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Shipping Address</label>
        <type>Text</type>
    </fields>
</CustomObject>